// centrifugo__centrifugo_monitoring/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.centrifugo_monitoring;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Healthcheck {

  string status = 1;
  string wrapper_url = 2;
  bool has_api_key = 3;
  string timestamp = 4;
}

message Overviewstats {

  int64 total = 1;
  int64 successful = 2;
  int64 failed = 3;
  int64 timeout = 4;
  double success_rate = 5;
  double avg_duration_ms = 6;
  double avg_acks_received = 7;
  int64 period_hours = 8;
}

message Publishesitem {
}

message Recentpublishes {

  repeated Publishesitem publishes = 1;
  int64 count = 2;
  int64 total_available = 3;
  optional int64 offset = 4;
  optional bool has_more = 5;
}

message Channelsitem {
}

message Channellist {

  repeated Channelsitem channels = 1;
  int64 total_channels = 2;
}

message Channelstatsserializer {

  string channel = 1;
  int64 total = 2;
  int64 successful = 3;
  int64 failed = 4;
  double avg_duration_ms = 5;
  double avg_acks = 6;
  optional string last_activity_at = 7;
}