// newsletter__logs/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.logs;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Resultsitem {
}

message Paginatedemailloglist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message Emaillog {

    enum Status {
      STATUS_UNKNOWN = 0;
      STATUS_PENDING = 1;
      STATUS_SENT = 2;
      STATUS_FAILED = 3;
    }

  string id = 1;
  optional int64 user = 2;
  string user_email = 3;
  optional int64 newsletter = 4;
  string newsletter_title = 5;
  string recipient = 6;
  string subject = 7;
  string body = 8;
  Status status = 9;
  google.protobuf.Timestamp created_at = 10;
  optional google.protobuf.Timestamp sent_at = 11;
  optional string error_message = 12;
}