// payments/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.payments;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message Balance {

  string balance_usd = 1;
  string balance_display = 2;
  string total_deposited = 3;
  string total_withdrawn = 4;
  optional google.protobuf.Timestamp last_transaction_at = 5;
}

message Resultsitem {
}

message Paginatedpaymentlistlist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message Paymentlist {

    enum Status {
      STATUS_UNKNOWN = 0;
      STATUS_PENDING = 1;
      STATUS_CONFIRMING = 2;
      STATUS_CONFIRMED = 3;
      STATUS_COMPLETED = 4;
      STATUS_PARTIALLY_PAID = 5;
      STATUS_FAILED = 6;
      STATUS_EXPIRED = 7;
      STATUS_CANCELLED = 8;
    }

  string id = 1;
  string internal_payment_id = 2;
  string amount_usd = 3;
  string currency_code = 4;
  string currency_token = 5;
  Status status = 6;
  string status_display = 7;
  google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp completed_at = 9;
}

message Paymentdetail {

    enum Status {
      STATUS_UNKNOWN = 0;
      STATUS_PENDING = 1;
      STATUS_CONFIRMING = 2;
      STATUS_CONFIRMED = 3;
      STATUS_COMPLETED = 4;
      STATUS_PARTIALLY_PAID = 5;
      STATUS_FAILED = 6;
      STATUS_EXPIRED = 7;
      STATUS_CANCELLED = 8;
    }

  string id = 1;
  string internal_payment_id = 2;
  string amount_usd = 3;
  string currency_code = 4;
  string currency_name = 5;
  string currency_token = 6;
  string currency_network = 7;
  optional string pay_amount = 8;
  optional string actual_amount = 9;
  optional string actual_amount_usd = 10;
  Status status = 11;
  string status_display = 12;
  optional string pay_address = 13;
  optional string qr_code_url = 14;
  optional string payment_url = 15;
  optional string transaction_hash = 16;
  optional string explorer_link = 17;
  int64 confirmations_count = 18;
  optional google.protobuf.Timestamp expires_at = 19;
  optional google.protobuf.Timestamp completed_at = 20;
  google.protobuf.Timestamp created_at = 21;
  bool is_completed = 22;
  bool is_failed = 23;
  bool is_expired = 24;
  string description = 25;
}